--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pixi/react": "7",
+    "@pixi/tilemap": "^4.1.0",
     "pixi-viewport": "^5.0.3",
     "pixi.js": "7",
     "react": "^18.3.1",
